# ungrammatical-mlm

./: package-lock.json  pyproject.toml
mlm_ukplab/MLM/: dataloader.py  train_mlm.py
mlm_ukplab/MLM/run_configs/: frenchnatioanlity_efcamdat_gt5_1epoch.json  frenchnationality_efcamdat_gt5_1epoch.json  frenchnationality_efcamdat_gt5_2epoch.json  fullefcamdat_gt5_local.json  fullefcamdat_mbert_gt5_1epoch.json
mlm_ungrammatical_text/: corrections_prediction_pipeline_agnostic.py  csvformat.csv  flattened_prediction_pipeline_agnostic.py  mlm.py  predicting_pipeline.py  predicting_pipeline_agnostic.py
mlm_ungrammatical_text/MLM/: Dockerfile  docker_build.sh  docker_run.sh  requirements.txt
mlm_ungrammatical_text/MLM/scripts/: mlm.ipynb  mlm.py
